# SimplePYBotSDK

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
examples/: RobotRESTSDK.postman_collection.json  example1_robotSDK.py  example2_robotSocketSDK.py  example2_socket_client.py  example2_socket_client_for_webots.py  example2_socket_receiver.py  example2_socket_receiver_for_webots.py  example3_robotRestSDK.py  example3_websocket_client.py  example3_websocket_client_for_webots.py  example4_robotRestSDK.py  example4_robotRestSDK_threading.py  example5_point_to_point.py  example6_robotRestSDK_socket_receiver.py  example7_point_to_point_recording.py  example8_websocket_ping_pong.py  example9_robotRestSDK_dualshock.py  example_webots_khr2hv.json  example_webots_khr2hv_motion.json  lambda_bot.json  lambda_motion.json
simplepybotsdk/: __init__.py  configurations.py  exceptions.py  motor.py  parserJSON.py  parserJSONCommands.py  robotRestSDK.py  robotSDK.py  robotSocketSDK.py  robotWebSocketSDK.py  sensor.py  twist.py
