[metadata]
name = simplepybotsdk
version = 0.3.beta4
description = A simple Python3 library to manage the states of servomotors and sensor in a robot.
license = MIT
license_files = LICENSE
author = Alex Vellone
url = https://github.com/vellons/SimplePYBotSDK

[options]
packages = simplepybotsdk
python_requires = >=3.5
install_requires =
    pyramid == 1.10.5
    websockets == 8.1
